parser/assembly_parser.go
// Code generated from java-escape by ANTLR 4.11.1. DO NOT EDIT.

package parser // Assembly
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AssemblyParser struct {
	*antlr.BaseParser
}

var assemblyParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func assemblyParserInit() {
	staticData := &assemblyParserStaticData
	staticData.literalNames = []string{
		"", "'z'", "'nz'", "'c'", "'nc'", "'R0'", "'R1'", "'R2'", "'R3'", "'R4'",
		"'R5'", "'R6'", "'R7'", "'R8'", "'R9'", "'OUT'", "'IN'", "'JSR'", "'PCL'",
		"'PCM'", "'PCH'", "'ADD'", "'ADC'", "'SUB'", "'SBB'", "'OR'", "'AND'",
		"'XOR'", "'MOV'", "'JR'", "'CP'", "'INC'", "'DEC'", "'DSZ'", "'EXR'",
		"'BIT'", "'BSET'", "'BCLR'", "'BTG'", "'RRC'", "'RET'", "'SKIP'", "'RLC'",
		"'SL'", "'LSR'", "'CPL'", "'NEG'", "'NOP'", "'LPC'", "'['", "']'", "'string'",
		"'.'", "','", "':'", "", "", "", "", "' '", "'\\n'", "'\\r'", "'\\t'",
	}
	staticData.symbolicNames = []string{
		"", "", "", "", "", "R0", "R1", "R2", "R3", "R4", "R5", "R6", "R7",
		"R8", "R9", "OUT", "IN", "JSR", "PCL", "PCM", "PCH", "ADD", "ADC", "SUB",
		"SBB", "OR", "AND", "XOR", "MOV", "JR", "CP", "INC", "DEC", "DSZ", "EXR",
		"BIT", "BSET", "BCLR", "BTG", "RRC", "RET", "SKIPI", "RLC", "SL", "LSR",
		"CPL", "NEG", "NOP", "LPC", "L_BRACKET", "R_BRACKET", "STRING", "DOT",
		"COMMA", "COLON", "CHARACTER", "LINE_COMMENT", "LABEL", "NUMBER", "WHITESPACE",
		"NEWLINE", "CARRIAGE", "TAB", "UNKNOWN",
	}
	staticData.ruleNames = []string{
		"start", "instruction", "syntheticInstruction", "macro", "registerSymbol",
		"rg", "flag", "dataByte", "nibble", "quarter", "registerCombo", "literal",
		"directive",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AssemblyParserInit initializes any static state used to implement AssemblyParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAssemblyParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AssemblyParserInit() {
	staticData := &assemblyParserStaticData
	staticData.once.Do(assemblyParserInit)
}

// NewAssemblyParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAssemblyParser(input antlr.TokenStream) *AssemblyParser {
	AssemblyParserInit()
	this := new(AssemblyParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &assemblyParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "java-escape"

	return this
}

// AssemblyParser tokens.
const (
	AssemblyParserEOF          = antlr.TokenEOF
	AssemblyParserT__0         = 1
	AssemblyParserT__1         = 2
	AssemblyParserT__2         = 3
	AssemblyParserT__3         = 4
	AssemblyParserR0           = 5
	AssemblyParserR1           = 6
	AssemblyParserR2           = 7
	AssemblyParserR3           = 8
	AssemblyParserR4           = 9
	AssemblyParserR5           = 10
	AssemblyParserR6           = 11
	AssemblyParserR7           = 12
	AssemblyParserR8           = 13
	AssemblyParserR9           = 14
	AssemblyParserOUT          = 15
	AssemblyParserIN           = 16
	AssemblyParserJSR          = 17
	AssemblyParserPCL          = 18
	AssemblyParserPCM          = 19
	AssemblyParserPCH          = 20
	AssemblyParserADD          = 21
	AssemblyParserADC          = 22
	AssemblyParserSUB          = 23
	AssemblyParserSBB          = 24
	AssemblyParserOR           = 25
	AssemblyParserAND          = 26
	AssemblyParserXOR          = 27
	AssemblyParserMOV          = 28
	AssemblyParserJR           = 29
	AssemblyParserCP           = 30
	AssemblyParserINC          = 31
	AssemblyParserDEC          = 32
	AssemblyParserDSZ          = 33
	AssemblyParserEXR          = 34
	AssemblyParserBIT          = 35
	AssemblyParserBSET         = 36
	AssemblyParserBCLR         = 37
	AssemblyParserBTG          = 38
	AssemblyParserRRC          = 39
	AssemblyParserRET          = 40
	AssemblyParserSKIPI        = 41
	AssemblyParserRLC          = 42
	AssemblyParserSL           = 43
	AssemblyParserLSR          = 44
	AssemblyParserCPL          = 45
	AssemblyParserNEG          = 46
	AssemblyParserNOP          = 47
	AssemblyParserLPC          = 48
	AssemblyParserL_BRACKET    = 49
	AssemblyParserR_BRACKET    = 50
	AssemblyParserSTRING       = 51
	AssemblyParserDOT          = 52
	AssemblyParserCOMMA        = 53
	AssemblyParserCOLON        = 54
	AssemblyParserCHARACTER    = 55
	AssemblyParserLINE_COMMENT = 56
	AssemblyParserLABEL        = 57
	AssemblyParserNUMBER       = 58
	AssemblyParserWHITESPACE   = 59
	AssemblyParserNEWLINE      = 60
	AssemblyParserCARRIAGE     = 61
	AssemblyParserTAB          = 62
	AssemblyParserUNKNOWN      = 63
)

// AssemblyParser rules.
const (
	AssemblyParserRULE_start                = 0
	AssemblyParserRULE_instruction          = 1
	AssemblyParserRULE_syntheticInstruction = 2
	AssemblyParserRULE_macro                = 3
	AssemblyParserRULE_registerSymbol       = 4
	AssemblyParserRULE_rg                   = 5
	AssemblyParserRULE_flag                 = 6
	AssemblyParserRULE_dataByte             = 7
	AssemblyParserRULE_nibble               = 8
	AssemblyParserRULE_quarter              = 9
	AssemblyParserRULE_registerCombo        = 10
	AssemblyParserRULE_literal              = 11
	AssemblyParserRULE_directive            = 12
)

// IStartContext is an interface to support dynamic dispatch.
type IStartContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStartContext differentiates from other interfaces.
	IsStartContext()
}

type StartContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStartContext() *StartContext {
	var p = new(StartContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AssemblyParserRULE_start
	return p
}

func (*StartContext) IsStartContext() {}

func NewStartContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StartContext {
	var p = new(StartContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblyParserRULE_start

	return p
}

func (s *StartContext) GetParser() antlr.Parser { return s.parser }

func (s *StartContext) EOF() antlr.TerminalNode {
	return s.GetToken(AssemblyParserEOF, 0)
}

func (s *StartContext) AllInstruction() []IInstructionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInstructionContext); ok {
			len++
		}
	}

	tst := make([]IInstructionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInstructionContext); ok {
			tst[i] = t.(IInstructionContext)
			i++
		}
	}

	return tst
}

func (s *StartContext) Instruction(i int) IInstructionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionContext)
}

func (s *StartContext) AllSyntheticInstruction() []ISyntheticInstructionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ISyntheticInstructionContext); ok {
			len++
		}
	}

	tst := make([]ISyntheticInstructionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ISyntheticInstructionContext); ok {
			tst[i] = t.(ISyntheticInstructionContext)
			i++
		}
	}

	return tst
}

func (s *StartContext) SyntheticInstruction(i int) ISyntheticInstructionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISyntheticInstructionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISyntheticInstructionContext)
}

func (s *StartContext) AllDirective() []IDirectiveContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDirectiveContext); ok {
			len++
		}
	}

	tst := make([]IDirectiveContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDirectiveContext); ok {
			tst[i] = t.(IDirectiveContext)
			i++
		}
	}

	return tst
}

func (s *StartContext) Directive(i int) IDirectiveContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDirectiveContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDirectiveContext)
}

func (s *StartContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StartContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StartContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblyListener); ok {
		listenerT.EnterStart(s)
	}
}

func (s *StartContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblyListener); ok {
		listenerT.ExitStart(s)
	}
}

func (p *AssemblyParser) Start() (localctx IStartContext) {
	this := p
	_ = this

	localctx = NewStartContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AssemblyParserRULE_start)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(35)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&5066549578694656) != 0 {
		p.SetState(27)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		if _la == AssemblyParserDOT {
			{
				p.SetState(26)
				p.Directive()
			}

		}
		p.SetState(31)
		p.GetErrorHandler().Sync(p)

		switch p.GetTokenStream().LA(1) {
		case AssemblyParserADD, AssemblyParserADC, AssemblyParserSUB, AssemblyParserSBB, AssemblyParserOR, AssemblyParserAND, AssemblyParserXOR, AssemblyParserMOV, AssemblyParserJR, AssemblyParserCP, AssemblyParserINC, AssemblyParserDEC, AssemblyParserDSZ, AssemblyParserEXR, AssemblyParserBIT, AssemblyParserBSET, AssemblyParserBCLR, AssemblyParserBTG, AssemblyParserRRC, AssemblyParserRET, AssemblyParserSKIPI, AssemblyParserLPC:
			{
				p.SetState(29)
				p.Instruction()
			}

		case AssemblyParserRLC, AssemblyParserSL, AssemblyParserLSR, AssemblyParserCPL, AssemblyParserNEG, AssemblyParserNOP:
			{
				p.SetState(30)
				p.SyntheticInstruction()
			}

		default:
			panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		}

		p.SetState(37)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(38)
		p.Match(AssemblyParserEOF)
	}

	return localctx
}

// IInstructionContext is an interface to support dynamic dispatch.
type IInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInstructionContext differentiates from other interfaces.
	IsInstructionContext()
}

type InstructionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionContext() *InstructionContext {
	var p = new(InstructionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AssemblyParserRULE_instruction
	return p
}

func (*InstructionContext) IsInstructionContext() {}

func NewInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionContext {
	var p = new(InstructionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AssemblyParserRULE_instruction

	return p
}

func (s *InstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionContext) ADD() antlr.TerminalNode {
	return s.GetToken(AssemblyParserADD, 0)
}

func (s *InstructionContext) AllRegisterSymbol() []IRegisterSymbolContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IRegisterSymbolContext); ok {
			len++
		}
	}

	tst := make([]IRegisterSymbolContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IRegisterSymbolContext); ok {
			tst[i] = t.(IRegisterSymbolContext)
			i++
		}
	}

	return tst
}

func (s *InstructionContext) RegisterSymbol(i int) IRegisterSymbolContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegisterSymbolContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegisterSymbolContext)
}

func (s *InstructionContext) COMMA() antlr.TerminalNode {
	return s.GetToken(AssemblyParserCOMMA, 0)
}

func (s *InstructionContext) ADC() antlr.TerminalNode {
	return s.GetToken(AssemblyParserADC, 0)
}

func (s *InstructionContext) SUB() antlr.TerminalNode {
	return s.GetToken(AssemblyParserSUB, 0)
}

func (s *InstructionContext) SBB() antlr.TerminalNode {
	return s.GetToken(AssemblyParserSBB, 0)
}

func (s *InstructionContext) OR() antlr.TerminalNode {
	return s.GetToken(AssemblyParserOR, 0)
}

func (s *InstructionContext) AND() antlr.TerminalNode {
	return s.GetToken(AssemblyParserAND, 0)
}

func (s *InstructionContext) XOR() antlr.TerminalNode {
	return s.GetToken(AssemblyParserXOR, 0)
}

func (s *InstructionContext) MOV() antlr.TerminalNode {
	return s.GetToken(AssemblyParserMOV, 0)
}

func (s *InstructionContext) Nibble() INibbleContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INibbleContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INibbleContext)
}

func (s *InstructionContext) RegisterCombo() IRegisterComboContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRegisterComboContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRegisterComboContext)
}

func (s *InstructionContext) R0() antlr.TerminalNode {
	return s.GetToken(AssemblyParserR0, 0)
}

func (s *InstructionContext) L_BRACKET() antlr.TerminalNode {
	return s.GetToken(AssemblyParserL_BRACKET, 0)
}

func (s *InstructionContext) DataByte() IDataByteContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDataByteContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDataByteContext)
}

func (s *InstructionContext) R_BRACKET() antlr.TerminalNode {
	return s.GetToken(AssemblyParserR_BRACKET, 0)
}

func (s *InstructionContext) LPC() antlr.TerminalNode {
	return s.GetToken(AssemblyParserLPC, 0)
}

func (s *InstructionContext) JR() antlr.TerminalNode {
	return s.GetToken(AssemblyParserJR, 0)
}

func (s *InstructionContext) CP() antlr.TerminalNode {
	return s.GetToken(AssemblyParserCP, 0)
}

func (s *InstructionContext) INC() antlr.TerminalNode {
	return s.GetToken(AssemblyParserINC, 0)
}

func (s *InstructionContext) DEC() antlr.TerminalNode {
	return s.GetToken(AssemblyParserDEC, 0)
}

func (s *InstructionContext) DSZ() antlr.TerminalNode {
	return s.GetToken(AssemblyParserDSZ, 0)
}

func (s *InstructionContext) EXR() antlr.TerminalNode {
	return s.GetToken(AssemblyParserEXR, 0)
}

func (s *InstructionContext) BIT() antlr.TerminalNode {
	return s.GetToken(AssemblyParserBIT, 0)
}

func (s *InstructionContext) Rg() IRgContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRgContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRgContext)
}

func (s *InstructionContext) Quarter() IQuarterContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IQuarterContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IQuarterContext)
}

func (s *InstructionContext) BSET() antlr.TerminalNode {
	return s.GetToken(AssemblyParserBSET, 0)
}

func (s *InstructionContext) BCLR() antlr.TerminalNode {
	return s.GetToken(AssemblyParserBCLR, 0)
}

func (s *InstructionContext) BTG() antlr.TerminalNode {
	return s.GetToken(AssemblyParserBTG, 0)
}

func (s *InstructionContext) RRC() antlr.TerminalNode {
	return s.GetToken(AssemblyParserRRC, 0)
}

func (s *InstructionContext) RET() antlr.TerminalNode {
	return s.GetToken(AssemblyParserRET, 0)
}

func (s *InstructionContext) SKIPI() antlr.TerminalNode {
	return s.GetToken(AssemblyParserSKIPI, 0)
}

func (s *InstructionContext) Flag() IFlagContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFlagContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFlagContext)
}

func (s *InstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblyListener); ok {
		listenerT.EnterInstruction(s)
	}
}

func (s *InstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(AssemblyListener); ok {
		listenerT.ExitInstruction(s)
	}
}

func (p *AssemblyParser) Instruction() (localctx IInstructionContext) {
	this := p
	_ = this

	localctx = NewInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AssemblyParserRULE_instruction)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(164)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(40)
			p.Match(AssemblyParserADD)
		}
		{
			p.SetState(41)
			p.RegisterSymbol()
		}
		{
			p.SetState(42)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(43)
			p.RegisterSymbol()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(45)
			p.Match(AssemblyParserADC)
		}
		{
			p.SetState(46)
			p.RegisterSymbol()
		}
		{
			p.SetState(47)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(48)
			p.RegisterSymbol()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(50)
			p.Match(AssemblyParserSUB)
		}
		{
			p.SetState(51)
			p.RegisterSymbol()
		}
		{
			p.SetState(52)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(53)
			p.RegisterSymbol()
		}

	case 4:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(55)
			p.Match(AssemblyParserSBB)
		}
		{
			p.SetState(56)
			p.RegisterSymbol()
		}
		{
			p.SetState(57)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(58)
			p.RegisterSymbol()
		}

	case 5:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(60)
			p.Match(AssemblyParserOR)
		}
		{
			p.SetState(61)
			p.RegisterSymbol()
		}
		{
			p.SetState(62)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(63)
			p.RegisterSymbol()
		}

	case 6:
		p.EnterOuterAlt(localctx, 6)
		{
			p.SetState(65)
			p.Match(AssemblyParserAND)
		}
		{
			p.SetState(66)
			p.RegisterSymbol()
		}
		{
			p.SetState(67)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(68)
			p.RegisterSymbol()
		}

	case 7:
		p.EnterOuterAlt(localctx, 7)
		{
			p.SetState(70)
			p.Match(AssemblyParserXOR)
		}
		{
			p.SetState(71)
			p.RegisterSymbol()
		}
		{
			p.SetState(72)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(73)
			p.RegisterSymbol()
		}

	case 8:
		p.EnterOuterAlt(localctx, 8)
		{
			p.SetState(75)
			p.Match(AssemblyParserMOV)
		}
		{
			p.SetState(76)
			p.RegisterSymbol()
		}
		{
			p.SetState(77)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(78)
			p.RegisterSymbol()
		}

	case 9:
		p.EnterOuterAlt(localctx, 9)
		{
			p.SetState(80)
			p.Match(AssemblyParserMOV)
		}
		{
			p.SetState(81)
			p.RegisterSymbol()
		}
		{
			p.SetState(82)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(83)
			p.Nibble()
		}

	case 10:
		p.EnterOuterAlt(localctx, 10)
		{
			p.SetState(85)
			p.Match(AssemblyParserMOV)
		}
		{
			p.SetState(86)
			p.RegisterCombo()
		}
		{
			p.SetState(87)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(88)
			p.Match(AssemblyParserR0)
		}

	case 11:
		p.EnterOuterAlt(localctx, 11)
		{
			p.SetState(90)
			p.Match(AssemblyParserMOV)
		}
		{
			p.SetState(91)
			p.Match(AssemblyParserR0)
		}
		{
			p.SetState(92)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(93)
			p.RegisterCombo()
		}

	case 12:
		p.EnterOuterAlt(localctx, 12)
		{
			p.SetState(94)
			p.Match(AssemblyParserMOV)
		}
		{
			p.SetState(95)
			p.Match(AssemblyParserR0)
		}
		{
			p.SetState(96)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(97)
			p.Match(AssemblyParserL_BRACKET)
		}
		{
			p.SetState(98)
			p.DataByte()
		}
		{
			p.SetState(99)
			p.Match(AssemblyParserR_BRACKET)
		}

	case 13:
		p.EnterOuterAlt(localctx, 13)
		{
			p.SetState(101)
			p.Match(AssemblyParserLPC)
		}
		{
			p.SetState(102)
			p.DataByte()
		}

	case 14:
		p.EnterOuterAlt(localctx, 14)
		{
			p.SetState(103)
			p.Match(AssemblyParserJR)
		}
		{
			p.SetState(104)
			p.DataByte()
		}

	case 15:
		p.EnterOuterAlt(localctx, 15)
		{
			p.SetState(105)
			p.Match(AssemblyParserCP)
		}
		{
			p.SetState(106)
			p.Match(AssemblyParserR0)
		}
		{
			p.SetState(107)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(108)
			p.Nibble()
		}

	case 16:
		p.EnterOuterAlt(localctx, 16)
		{
			p.SetState(109)
			p.Match(AssemblyParserADD)
		}
		{
			p.SetState(110)
			p.Match(AssemblyParserR0)
		}
		{
			p.SetState(111)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(112)
			p.Nibble()
		}

	case 17:
		p.EnterOuterAlt(localctx, 17)
		{
			p.SetState(113)
			p.Match(AssemblyParserINC)
		}
		{
			p.SetState(114)
			p.RegisterSymbol()
		}

	case 18:
		p.EnterOuterAlt(localctx, 18)
		{
			p.SetState(115)
			p.Match(AssemblyParserDEC)
		}
		{
			p.SetState(116)
			p.RegisterSymbol()
		}

	case 19:
		p.EnterOuterAlt(localctx, 19)
		{
			p.SetState(117)
			p.Match(AssemblyParserDSZ)
		}
		{
			p.SetState(118)
			p.RegisterSymbol()
		}

	case 20:
		p.EnterOuterAlt(localctx, 20)
		{
			p.SetState(119)
			p.Match(AssemblyParserOR)
		}
		{
			p.SetState(120)
			p.Match(AssemblyParserR0)
		}
		{
			p.SetState(121)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(122)
			p.Nibble()
		}

	case 21:
		p.EnterOuterAlt(localctx, 21)
		{
			p.SetState(123)
			p.Match(AssemblyParserAND)
		}
		{
			p.SetState(124)
			p.Match(AssemblyParserR0)
		}
		{
			p.SetState(125)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(126)
			p.Nibble()
		}

	case 22:
		p.EnterOuterAlt(localctx, 22)
		{
			p.SetState(127)
			p.Match(AssemblyParserXOR)
		}
		{
			p.SetState(128)
			p.Match(AssemblyParserR0)
		}
		{
			p.SetState(129)
			p.Match(AssemblyParserCOMMA)
		}
		{
			p.SetState(130)
			p.Nibble()
		}
